--- a/style.css
+++ b/style.css
@@ -1,59 +1,85 @@
 /* Basic Reset */
 *, ::before, ::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f8f8f8;
-    color: #333;
-    padding: 20px;
-  }
-  
-  header {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  header h1 {
-    font-size: 2.5rem;
-  }
-  
-  /*
-  Sintaxe do repeat:
-  repeat(número de vezes, tamanho da coluna/linha);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  O auto-fit faz com que o número de colunas seja ajustado automaticamente, dependendo do tamanho da tela ou do contêiner.
-  */
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 15px;
-  }
-  
-  .gallery-item {
-    overflow: hidden;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
-  
-  .gallery-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    display: block;
-    transition: transform 0.3s ease;
-  }
-  
-  .gallery-item:hover img {
-    transform: scale(1.1);
-  }
-  
-  footer {
-    text-align: center;
-    margin-top: 20px;
-    font-size: 1.2rem;
-  }
-  
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f8f8f8;
+  color: #333;
+  padding: 20px;
+}
+
+header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+header h1 {
+  font-size: 2.5rem;
+}
+
+/*
+Sintaxe do repeat:
+repeat(número de vezes, tamanho da coluna/linha);
+
+O auto-fit faz com que o número de colunas seja ajustado automaticamente, dependendo do tamanho da tela ou do contêiner.
+*/
+.gallery1 {
+  display: grid;
+  grid-template-columns: 200px 200px;
+  grid-template-rows: 100px 100px;
+  grid-auto-flow: column;
+  gap: 15px;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.gallery2 {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: 200px;
+  grid-auto-flow: column;
+  gap: 15px;
+  margin-bottom: 50px;
+}
+
+.item-a{
+  grid-column: 1;
+  grid-row: 1 / 3;
+}
+
+.item-b{
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.item-c{
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.gallery-item {
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+.gallery-item:hover img {
+  transform: scale(1.1);
+}
+
+footer {
+  text-align: center;
+  margin-top: 150px;
+  font-size: 1.2rem;
+}
